--- a/index.html
+++ b/index.html
@@ -41,5 +41,32 @@
         </div>
       </div>
     </header>
+    <main>
+      <section id="portfolio">
+        <h2>Portfolio</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="portfolio-item"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
