--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title></title>
   </head>
@@ -29,7 +29,7 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
-      <div class="jumbotron">
+      <section class="jumbotron">
         <div class="container">
           <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
@@ -39,7 +39,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </header>
     <main>
       <section id="portfolio">
@@ -67,6 +67,27 @@
           </div>
         </div>
       </section>
+      <section id="about">
+        <h2>About</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos eaque, commodi non sed, ad quo minus tempore. Facere nostrum amet culpa, voluptatum blanditiis molestias nemo dolorem, quas praesentium illo! Quasi!</p>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos eaque, commodi non sed, ad quo minus tempore. Facere nostrum amet culpa, voluptatum blanditiis molestias nemo dolorem, quas praesentium illo! Quasi!</p>
+              </div>
+            </div>
+            <div class="col-xs-12"><button class="btn btn-default">Download</button></div>
+          </div>
+        </div>
+      </section>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
