--- a/index.html
+++ b/index.html
@@ -85,6 +85,33 @@
           </div>
         </div>
       </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-8 col-xs-offset-2">
+              <form>
+                <div class="form-group">
+                  <label for="name">Name</label>
+                  <input type="text" class="form-control" id="form-name" placeholder="Name">
+                </div>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="form-email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <label for="email">Phone</label>
+                  <input type="tel" class="form-control" id="form-phone" placeholder="Phone">
+                </div>
+                <div class="form-group">
+                  <label for="message">Message</label>
+                  <textarea class="form-control" name="form-message" id="" cols="30" rows="10"></textarea>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
