--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <title>html-css-bootstrap-freelancer</title>
   </head>
   <body>
+    <!-- header -->
     <header>
+      <!-- navigation -->
       <nav class="navbar navbar-inverse">
         <div class="container">
           <div class="navbar-header">
@@ -29,6 +31,8 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
+      <!-- /navigation -->
+      <!-- jumbotron -->
       <section class="jumbotron">
         <div class="container">
           <div class="row">
@@ -40,8 +44,12 @@
           </div>
         </div>
       </section>
+      <!-- /jumbotron -->
     </header>
+    <!-- /header -->
+    <!-- main -->
     <main>
+      <!-- sezione portfolio -->
       <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="container">
@@ -67,6 +75,8 @@
           </div>
         </div>
       </section>
+      <!-- /sezione portfolio -->
+      <!-- sezione about -->
       <section id="about">
         <h2>About</h2>
         <div class="container">
@@ -85,11 +95,14 @@
           </div>
         </div>
       </section>
+      <!-- /sezione about -->
+      <!-- sezione contatti -->
       <section id="contact">
         <h2>Contact</h2>
         <div class="container">
           <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
+              <!-- form contatti -->
               <form>
                 <div class="form-group">
                   <label for="name">Name</label>
@@ -108,13 +121,48 @@
                   <textarea class="form-control" name="form-message" id="" cols="30" rows="10"></textarea>
                 </div>
               </form>
+              <!-- /form contatti -->
             </div>
           </div>
         </div>
       </section>
+      <!-- /sezione contatti -->
     </main>
+    <!-- /main -->
+    <!-- footer -->
+    <footer>
+      <!-- footer-top -->
+      <div id="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-sm-4">
+              <div class="footer-column"></div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <div class="footer-column"></div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+              <div class="footer-column"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /footer-top -->
+      <!-- footer-bottom -->
+      <div id="footer-bottom">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /footer-bottom -->
+      </footer>
+      <!-- /footer -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
