Struttura e stile hero

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>html-css-bootstrap-freelancer</title>
@@ -35,17 +36,22 @@
       </div>
       <!-- /navigation -->
       <!-- jumbotron -->
-      <section class="jumbotron">
+      <div class="hero bg_aqua p-60">
         <div class="container">
           <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
-              <div class="hero_content">
-
+            <div class="col-xs-12">
+              <div class="hero_content text-center">
+                <img src="img/avatar.svg" alt="Avatar">
+                <h1>Start Bootstrap</h1>
+                <div class="icon_separator">
+                  <i class="fas fa-star"></i>
+                </div>
+                <p class="fw_400">Graphic Artist &dash; Web Designer &dash; Illustrator</p>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <!-- /jumbotron -->
     </header>
     <!-- /header -->
@@ -60,7 +66,7 @@
               <div class="portfolio_item"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio-item"></div>
+              <div class="portfolio_item"></div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="portfolio_item"></div>
