Struttura e stile sezione Portfolio

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="hero_content text-center">
                 <img src="img/avatar.svg" alt="Avatar">
                 <h1>Start Bootstrap</h1>
-                <div class="icon_separator">
+                <div class="icon_separator white_line">
                   <i class="fas fa-star"></i>
                 </div>
                 <p class="fw_400">Graphic Artist &dash; Web Designer &dash; Illustrator</p>
@@ -60,25 +60,40 @@
       <!-- sezione portfolio -->
       <section id="portfolio">
         <h2>Portfolio</h2>
+        <div class="icon_separator dark_line t_dark text-center">
+          <i class="fas fa-star"></i>
+        </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/cabin.png" alt="">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/cake.png" alt="">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/circus.png" alt="">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/game.png" alt="">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/safe.png" alt="">
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4">
-              <div class="portfolio_item"></div>
+            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+              <div class="portfolio_item">
+                <img src="img/submarine.png" alt="">
+              </div>
             </div>
           </div>
         </div>
