Struttura e stile sezione About

--- a/index.html
+++ b/index.html
@@ -100,21 +100,28 @@
       </section>
       <!-- /sezione portfolio -->
       <!-- sezione about -->
-      <section id="about">
+      <section id="about" class="bg_aqua t_white">
         <h2>About</h2>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-sm-6">
-              <div class="about_text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos eaque, commodi non sed, ad quo minus tempore. Facere nostrum amet culpa, voluptatum blanditiis molestias nemo dolorem, quas praesentium illo! Quasi!</p>
+        <div class="icon_separator white_line t_white text-center">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12 col-sm-6">
+                <div class="about_text">
+                  <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6">
+                <div class="about_text">
+                  <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                </div>
+              </div>
+              <div class="col-xs-12 text-center">
+                <button type="button" class="btn btn-lg btn_transparent"><span class="glyphicon glyphicon-save"></span> Free Download!</button>
               </div>
             </div>
-            <div class="col-xs-12 col-sm-6">
-              <div class="about_text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos eaque, commodi non sed, ad quo minus tempore. Facere nostrum amet culpa, voluptatum blanditiis molestias nemo dolorem, quas praesentium illo! Quasi!</p>
-              </div>
-            </div>
-            <div class="col-xs-12"><button class="btn btn-default">Download</button></div>
           </div>
         </div>
       </section>
