--- a/index.html
+++ b/index.html
@@ -128,28 +128,28 @@
       <!-- /sezione about -->
       <!-- sezione contatti -->
       <section id="contact">
-        <h2>Contact</h2>
+        <h2>Contact Me</h2>
+        <div class="icon_separator dark_line t_dark text-center">
+          <i class="fas fa-star"></i>
+        </div>
         <div class="container">
           <div class="row">
             <div class="col-xs-8 col-xs-offset-2">
               <!-- form contatti -->
               <form>
                 <div class="form-group">
-                  <label for="name">Name</label>
                   <input type="text" class="form-control" id="form-name" placeholder="Name">
                 </div>
                 <div class="form-group">
-                  <label for="email">Email</label>
                   <input type="email" class="form-control" id="form-email" placeholder="Email">
                 </div>
                 <div class="form-group">
-                  <label for="email">Phone</label>
-                  <input type="tel" class="form-control" id="form-phone" placeholder="Phone">
+                  <input type="tel" class="form-control" id="form-phone" placeholder="Phone Number">
                 </div>
                 <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea class="form-control" name="form-message" id="" cols="30" rows="10"></textarea>
+                  <textarea class="form-control" name="form-message" placeholder="Message" id="form-message"cols="20" rows="4"></textarea>
                 </div>
+                <button type="button" class="btn btn_aqua btn-lg btn_p">Send</button>
               </form>
               <!-- /form contatti -->
             </div>
