--- a/index.html
+++ b/index.html
@@ -162,17 +162,31 @@
     <!-- footer -->
     <footer>
       <!-- footer-top -->
-      <div id="footer_top">
+      <div id="footer_top" class="bg_dark">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-sm-4">
-              <div class="footer_column"></div>
+            <div class="col-xs-12 col-md-4">
+              <div class="footer_column">
+                <h3>Location</h3>
+                <p>2215 John Daniel Drive<br>Clark, MO 65243</p>
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
-              <div class="footer_column"></div>
+            <div class="col-xs-12 col-md-4">
+              <div class="footer_column">
+                <h3>Around the web</h3>
+                <ul class="footer_social">
+                  <li class="list_inline"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                  <li class="list_inline"><a href="#"><i class="fab fa-twitter"></i></a></li>
+                  <li class="list_inline"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li class="list_inline"><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                </ul>
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-4">
-              <div class="footer_column"></div>
+            <div class="col-xs-12 col-md-4">
+              <div class="footer_column">
+                <h3>About freelancer</h3>
+                <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="">Start Bootstrap</a>.</p>
+              </div>
             </div>
           </div>
         </div>
