--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/cabin.png" alt="">
               </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/cake.png" alt="">
               </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/circus.png" alt="">
               </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/game.png" alt="">
               </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/safe.png" alt="">
               </div>
             </div>
-            <div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-0 col-md-4">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/submarine.png" alt="">
               </div>
@@ -132,29 +132,32 @@
         <div class="icon_separator dark_line t_dark text-center">
           <i class="fas fa-star"></i>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-8 col-xs-offset-2">
-              <!-- form contatti -->
-              <form>
-                <div class="form-group">
-                  <input type="text" class="form-control" id="form-name" placeholder="Name">
-                </div>
-                <div class="form-group">
-                  <input type="email" class="form-control" id="form-email" placeholder="Email">
-                </div>
-                <div class="form-group">
-                  <input type="tel" class="form-control" id="form-phone" placeholder="Phone Number">
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" name="form-message" placeholder="Message" id="form-message"cols="20" rows="4"></textarea>
-                </div>
-                <button type="button" class="btn btn_aqua btn-lg btn_p">Send</button>
-              </form>
-              <!-- /form contatti -->
+        <div class="wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-xs-12">
+                <!-- form contatti -->
+                <form>
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="form-name" placeholder="Name">
+                  </div>
+                  <div class="form-group">
+                    <input type="email" class="form-control" id="form-email" placeholder="Email">
+                  </div>
+                  <div class="form-group">
+                    <input type="tel" class="form-control" id="form-phone" placeholder="Phone Number">
+                  </div>
+                  <div class="form-group">
+                    <textarea class="form-control" name="form-message" placeholder="Message" id="form-message"cols="20" rows="4"></textarea>
+                  </div>
+                  <button type="button" class="btn btn_aqua btn-lg btn_p">Send</button>
+                </form>
+                <!-- /form contatti -->
+              </div>
             </div>
           </div>
         </div>
+
       </section>
       <!-- /sezione contatti -->
     </main>
@@ -196,8 +199,8 @@
       <div id="footer_bottom">
         <div class="container">
           <div class="row">
-            <div class="col-xs-12">
-              <p>Lorem ipsum dolor sit amet.</p>
+            <div class="col-xs-12 text-center">
+              <p>Copyright &copy; Your Website 2020</p>
             </div>
           </div>
         </div>
