--- a/index.html
+++ b/index.html
@@ -68,31 +68,37 @@
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/cabin.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/cake.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/circus.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/game.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/safe.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4">
               <div class="portfolio_item">
                 <img src="img/submarine.png" alt="">
+                <div class="portfolio_item_overlay"><i class="fas fa-plus"></i></div>
               </div>
             </div>
           </div>
