--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </nav>
               <div class="hamburger_menu visible-xs visible-sm pull-right">
                 <button type="button" class="btn btn_aqua">
-                  <span class="glyphicon glyphicon-menu-hamburger"></span>
+                  MENU<span class="glyphicon glyphicon-menu-hamburger"></span>
                 </button>
               </div>
             </div>
@@ -125,7 +125,7 @@
                 </div>
               </div>
               <div class="col-xs-12 text-center">
-                <button type="button" class="btn btn-lg btn_transparent"><span class="glyphicon glyphicon-save"></span> Free Download!</button>
+                <button type="button" class="btn btn_transparent btn_p"><span class="glyphicon glyphicon-save"></span> Free Download!</button>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
                   <div class="form-group">
                     <textarea class="form-control" name="form-message" placeholder="Message" id="form-message"cols="20" rows="4"></textarea>
                   </div>
-                  <button type="button" class="btn btn_aqua btn-lg btn_p">Send</button>
+                  <button type="button" class="btn btn_aqua btn_p">Send</button>
                 </form>
                 <!-- /form contatti -->
               </div>
